<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddPhonebookActivity">

    <TextView
        android:id="@+id/add_new_contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_contact"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:fontFamily="sans-serif-light"
        android:hint="@string/first_name"
        android:inputType="textAutoComplete"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_contact_text" />

    <EditText
        android:id="@+id/middleName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:fontFamily="sans-serif-light"
        android:hint="@string/middle_name"
        android:inputType="textAutoComplete"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_editText" />

    <EditText
        android:id="@+id/lastName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:fontFamily="sans-serif-light"
        android:hint="@string/last_name"
        android:inputType="textAutoComplete"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middleName_editText" />

    <EditText
        android:id="@+id/primaryPhone_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:fontFamily="sans-serif-light"
        android:hint="@string/primary_phone"
        android:inputType="phone"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_editText" />

    <EditText
        android:id="@+id/secondaryPhone_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:fontFamily="sans-serif-light"
        android:hint="@string/secondary_phone"
        android:inputType="phone"
        android:textSize="16sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryPhone_editText" />

    <EditText
        android:id="@+id/groups_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="name"
        android:fontFamily="sans-serif-light"
        android:hint="@string/groups"
        android:inputType="textAutoComplete"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondaryPhone_editText" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/groups_editText"
        app:layout_constraintTop_toBottomOf="@+id/groups_editText" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/groups_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>