<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserDetailPhonebookActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/img1"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/name_example"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <LinearLayout
        android:id="@+id/primary_number_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="12sp"
            android:text="@string/primary_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:text="@string/number_example"
            android:textStyle="bold"
            android:textAllCaps="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondary_number_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/primary_number_container"
        app:layout_constraintStart_toStartOf="@+id/primary_number_container"
        app:layout_constraintTop_toBottomOf="@+id/primary_number_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/secondary_number"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/number_example"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>